Dependencies update